# shank-bridge

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yaml  expanded.rs  package.json  spec.yaml
.cargo/: config.toml
.github/workflows/: build-upload-binaries.yaml  publish-rust.yaml
benches/: dynamic.rs  enum.rs  static.rs
cli/: Cargo.toml
cli/src/: cli_args.rs  lib.rs  ncn_portal.rs  ncn_portal_handler.rs
clients/js/ncn_portal_client/programs/: ncnPortal.ts
clients/rust/ncn_portal_client/: Cargo.toml
clients/rust/ncn_portal_client/src/: lib.rs
config/: program.env
engine/: Cargo.toml  Dockerfile
idl/: ncn_portal.json
integration_tests/: Cargo.toml
integration_tests/tests/: tests.rs
integration_tests/tests/fixtures/: fixture.rs  mod.rs  ncn_portal_client.rs
integration_tests/tests/ncn_portal/: add_to_whitelist.rs  check_whitelisted.rs  initialize_whitelist.rs  mod.rs  remove_from_whitelist.rs
meta_merkle_tree/: Cargo.toml
meta_merkle_tree/src/: delegation.rs  error.rs  generated_merkle_tree.rs  generated_merkle_tree_collection.rs  lib.rs  meta_merkle_tree.rs  ncn_portal_meta.rs  stake_meta.rs  stake_meta_collection.rs  stake_meta_tree_node.rs  tip_distribution_meta.rs  tree_node.rs
meta_merkle_tree/src/pubkey_string_conversion/: mod.rs
ncn_portal_core/: Cargo.toml
ncn_portal_core/src/: discriminators.rs  lib.rs  merkle_root.rs  whitelist.rs  whitelist_entry.rs
ncn_portal_program/: Cargo.toml
ncn_portal_program/src/: add_to_whitelist.rs  admin_set_new_admin.rs  admin_update_merkle_root.rs  check_whitelisted.rs  initialize_whitelist.rs  lib.rs  remove_from_whitelist.rs
ncn_portal_sdk/: Cargo.toml
ncn_portal_sdk/src/: error.rs  instruction.rs  sdk.rs
proxyContract/contracts/: Bank.sol  Dogs.sol  DogsUpdated.sol  Proxy.sol  Storage.sol
proxyContract/migrations/: 2_deploy_proxy.js
scripts/: generate-clients.js
shank-cli/: Cargo.toml
shank-cli/src/: main.rs
shank-idl-generator/: Cargo.toml  README.md
shank-idl-generator/src/: main.rs
src/: lib.rs  main.rs
