[package]
name = "ncn-portal"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
rig-core = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "server"
path = "src/bin/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[lib]
name = "ncn_portal"
paht = "src/lib.rs"
