[workspace]
members = [ 
	"clients/rust/ncn_portal_client",
	"engine",
	"integration_tests",
	"ncn_portal_core",
	"ncn_portal_program",
	"ncn_portal_sdk",
	"shank-cli",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["idl-build"] }
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
const_str_to_pubkey = "0.1.1"
dotenv = "0.15.0"
envfile = "0.2.1"
env_logger = "0.10.2"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
jito-account-traits-derive = { git = "https://github.com/jito-foundation/restaking.git", rev = "eaf88e7e5ca2845fe3108c4fc4a06a25f9a8514d" }
jito-bytemuck = { git = "https://github.com/jito-foundation/restaking.git", rev = "eaf88e7e5ca2845fe3108c4fc4a06a25f9a8514d" }
jito-jsm-core = { git = "https://github.com/jito-foundation/restaking.git", rev = "eaf88e7e5ca2845fe3108c4fc4a06a25f9a8514d" }
log = "0.4.22"
ncn-portal-core = { path = "ncn_portal_core", version = "0.1.0" }
ncn-portal-program = { path = "ncn_portal_program", version = "0.1.0" }
ncn-portal-sdk = { path = "ncn_portal_sdk", version = "0.1.0" }
num-derive = "0.4.2"
num-traits = "0.2.19"
rig-core = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.9.0"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-program = "~1.18"
solana-program-test = "~1.18"
solana-sdk = "~1.18"
thiserror = "1.0.57"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

