[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
env_logger = { workspace = true }
jito-bytemuck = { workspace = true }
log = { workspace = true }
ncn-portal-client = { workspace = true }
ncn-portal-core = { workspace = true }
ncn-portal-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
solana-cli-config = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "ncn-portal-cli"
path = "src/bin/main.rs"
