[package]
name = "ncn-portal-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
headers = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "ncn-portal-engine"
path = "src/bin/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[lib]
name = "ncn_portal"
paht = "src/lib.rs"
