[package]
name = "ncn-portal-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
meta-merkle-tree = { workspace = true }
ncn-portal-core = { workspace = true }
ncn-portal-program = { workspace = true }
ncn-portal-sdk = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
