[package]
name = "shank-idl-generator"
version = "0.0.10"
edition = "2024"
description = "A Rust client for generating IDL"
license = "Apache-2.0"
repository = "https://github.com/aoikurokawa/shank-bridge"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
envfile = { workspace = true }
log = { workspace = true }
shank = { workspace = true }
shank_idl = { workspace = true }
